Fixed submenu and header spacing.

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -514,7 +514,7 @@ ul.social-buttons li a:active {
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 64px;
   z-index: 20;
   ul {
     margin: 0 auto;
